--- a/src/components/Cards/Cards.module.css
+++ b/src/components/Cards/Cards.module.css
@@ -17,3 +17,9 @@
 .deaths {
   border-bottom: 10px solid rgba(255, 0, 0, 0.5);
 }
+
+@media (max-width: 770px) {
+  .cards {
+    margin: 2% 0 im !important;
+  }
+}
